# SUNARP_SERVICE

./: .gitignore  README.md  pyproject.toml
config/: config.ini.example
src/sunarp_service/: __init__.py  service.py
src/sunarp_service/helpers/: convert.py  info.py
src/sunarp_service/models/: sunarp_ingreso_solicitud.py
src/sunarp_service/models/participants/: participantes.py
src/sunarp_service/models/participants/core/: __init__.py  participante_natural.py
src/sunarp_service/models/types/: actos_registrales.py  dict.py  estados_civiles.py  nacionalidades.py  ocupaciones_profesiones.py  oficinas_registrales.py  services.py  solicitud.py  tipo_documentos.py  tipo_participantes.py
src/sunarp_service/modules/builders/: apoderado_builder.py  poderdante_builder.py
src/sunarp_service/titulos_enviados/: sunarp_titulos_enviados.py  utils.py
src/sunarp_service/titulos_enviados/application/: get_data.py  get_sunarp_result.py
src/sunarp_service/titulos_enviados/entities/: exceptions.py  result.py  sunarp_titulos_observados.py  types.py
src/sunarp_service/utils/: alert.py  input.py  poderdante.py  select.py
tests/: __init__.py  conftest.py  test_sunarp_apoderado.py.example  test_sunarp_poderdante.py.example  test_sunarp_solicitud.py.example  test_sunarp_titulos.py.example
